--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 :root{
     --font-primary: "Baloo Da 2", serif;
-    --font-secondary: "Josefin Slab", serif;
+    --font-secundary: "Josefin Slab", serif;
     --font-action: "Mulish", serif;
 }
 
@@ -32,7 +32,7 @@
     cursor: pointer;
 }
 
-.show-menu.hamburguer{
+.show-menu .hamburguer{
     right: 15rem;
 }
 
@@ -66,7 +66,7 @@
     justify-content: center;
     align-items: center;
     background-color: #a044ff;
-    color: #fff;
+    color: #ffffff;
     font-family: var(--font-action);
     opacity: 0;
 }
@@ -75,13 +75,13 @@
     content: "";
     position: absolute;
     border-right: .5rem solid #a044ff;
-    border-right: .5rem solid transparent;
-    border-right: .5rem solid transparent;
-    border-right: .5rem solid transparent;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
     left: -1rem;
 }
 
-.show-menu.hamburguer:hover span{
+.show-menu .hamburguer:hover span{
     opacity: 1;
 }
 
@@ -136,7 +136,7 @@ header {
 }
 
 .banner p{
-    font-family: var(--font-secondary);
+    font-family: var(--font-secundary);
     color: #ffffff;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0, 0, 0, .4);
@@ -181,11 +181,14 @@ header {
     transition: all 1s;
 }
 
+.show-menu .sidebar{
+    right: 0;
+}
 
 
 .menu{
     position: absolute;
-    top: 40%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, 50%);
 }
@@ -232,15 +235,185 @@ header {
     background-color: #a044ff;
 }
 
+.conhecimentos {
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: 0.5rem;
+  }
+  
+  .conhecimento:nth-child(1) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+  }
+  
+  .conhecimento:nth-child(2) {
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+  }
+  
+  .conhecimento:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+  }
+  
+  .conhecimento:nth-child(4) {
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+  }
+  
+  .conhecimento:nth-child(5) {
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+  }
+  
+  .conhecimento:nth-child(6) {
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+  }
+  
+  .sessao-conhecimentos {
+    background-color: #f5f5f5;
+    height: 100%;
+  }
+  
+  .sessao-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sessao-header h1 {
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: #4b4b4b;
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 1.5rem;
+  }
+  
+  .conhecimento-header {
+    display: flex;
+    align-items: center;
+    color: #4b4b4b;
+  }
+  
+  .conhecimento-header i {
+    font-size: 2.5rem;
+  }
+  
+  .conhecimento-header h3 {
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+  }
+  
+  .conhecimento-text {
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+  }
+  
+  .conhecimentos-img-wrapper {
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 80%;
+    height: 80%;
+  }
+  
+  .conhecimentos-img-wrapper img {
+    object-fit: cover;
+    height: 100%;
+  }
+  
+
+  .projetos{
+      display: flex;
+      justify-content: space-evenly;
+  }
+
+  .card{
+      width: 19rem;
+      height: 28rem;
+      position: relative;
+  }
+
+  .card-img-wrapper{
+      width: 100%;
+      height: 100%;
+      background-color: #262626;
+      border-radius: 0.5rem;
+  }
+
+  .card-img-wrapper img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: .5rem;
+      opacity: .8;
+      transition: opacity 0.3s;
+  }
+
+  .card:hover .card-img-wrapper img{
+      opacity: .5;
+  }
+
+.card-info{
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    padding: 2rem;
+    text-shadow: 0.3 0.2rem 0.3rem rgba( 0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: all 1.5s;
+}
 
 
+.card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+
+.card-info h3{
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: #ff4081;
+    margin-bottom: 1.5rem;
+}
+
+.card-info p{
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+    text-shadow: #000;
+    text-align: justify;
+}
+
+.card-info button{
+    
+    width: 8rem;
+    height: 2.5rem;
+    background: #6a3093;  
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);  
+    background: linear-gradient(to left, #a044ff, #6a3093);
+    font-family: var(--font-action);
+    font-size: 1rem;
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba( 0, 0, 0, .4);
+}
 
 
-
-
-
-
-
+.card:hover .card-info{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
 
 
 
